--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/qs": "^6.5.3",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
