--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "color": "^3.1.2",
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "qs": "^6.8.0",
